Removing  horizontal scroll bar. Resolves #5. Resolves #31

--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@ body {
 
 #root {
   min-width: 100%;
-  max-width: 100vw;
+  max-width: 100%;
   overflow: hidden;
 }
 
